# syllabus-tracker

./: .dockerignore  .env  .gitignore  .secrets.template.env  .sops-sillybus.yaml  .sops.yaml  AGENTS.md  Cargo.toml  Dockerfile  PLAN_ACTIVITY.md  TODO.md  docker-compose.blue-green.yml  docker-compose.dev.yml  docker-compose.nixos.yml  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.video-cloud.yml  docker-compose.yml  flake.nix  justfile  lefthook.yml  runtime-secrets-sillybus.enc.env  runtime-secrets.enc.env  sqlite.db  stack.yml
.cargo/: config.toml
.claude/: settings.local.json
.sqlx/: query-000c52350cc6f8f416d9597bccc62fc965c39fc77ab75312d16828ea7863dbb4.json  query-004a6a71712e04e190096cd30ee5715b2e282e7cdee9b57fee932bbc322d79d5.json  query-004f2f7c0d7d5b2a7d5b2c1847debf3bdb4ad1056999fe738ca0a4d05f01aba9.json  query-0110e79c5ff065901f5cc2f945f9a475dcdea54c4b168f311e9ea2e22cd67dcf.json  query-01db8b363dfe46525726ed65be200dcae339bbdfb7c01c3cbf62f0bde344734e.json  query-0274ee61ad4bc0edc8975f679a91dad7907946d9c37ff3a5afb3c029755b8047.json  query-02c3dc4e31e399e7e6a7f8d652524520766b607e4082c1b9a930087e74b21dd6.json  query-04052f313e904d99dc445cea273774c4f38d54541b81f7ca7dc47a4e6a19accb.json  query-05144515d7ff759db23920002958f6a169f45bdc36ad3cbbfbe0e1ef525b82f1.json  query-056d175e6450e25a385905b375e08d25f18c01e31c069e26e7f0bd81e08a0af4.json  query-0570d217b84cac03019e72f319888b56096b92a4c334ae263e1bbf730a49f41d.json  query-05ad305daf9402630e91d44f81dab1d0465e11ee1c3093ce8101e942aadc2ce6.json  query-05c9d2e9ac84c9f16469034b71d61b137d9c73a417b64d50bf11c4c351e94e5e.json  query-06a3ceafb551f87bc64978910372701d5b19cc607f6440a7410ac02496ce08bf.json  query-06b6d2aaf5bc02aaa4e1dc193b68c387a46544fe42dc6ee9752616669b59c5ef.json  query-075077df93a3ecfdf56e3d0d713c0c2f3f78e9f9be54deca5a613167d03d1f00.json  query-0857e4d2d5f29eb44f6b327c00c12f8208f533908173645139459189857d4234.json  query-096c665d8295a243179c77f73aa4a8b7a5dc8f040cf05ce4206faceeebba60a0.json  query-099c13ec04168eb773c2a38f1884ed1e71cca6411b01cc7994743dd6be6456f8.json  query-0a5265b4ed25edc732e48069b105dc70d20760e4d5f51d63554e795746843fa9.json  query-0b12eb084d0ef59485df6ae1934c585057940acf8a6128373d1052f2b44fa7b9.json  query-0b48abdb5a879fd188b95b5610bebdde392838b38cc6dd85f7b7d41687b7614c.json  query-0b5880f352b0cdba3e3738ed2b70add6c316e6e768fe7084c5270577e19111d6.json  query-0b638c4786a58355960c1170db3509715ae3adaff0b1e87150efcc36fa2a86c3.json  query-0bc3a4e9d3d97907e9b35a8a6fba10c766e65184f809daa888102c578d952574.json  query-0bd7de1651007f1a43b8f1e7b5fc764bb16e2f32e4d81ce9c514235cd167a90a.json  query-0c7b126da2b1c1f81f347fb72be686e387c26edc3431cdcc1eb7130cb1528128.json  query-0e0da6723dbf00a3631e74f34546586c33a14818050f5c8aa02158d3a4de012d.json  query-0f4a6893116a2c3e7c03dd3f69b2a6bbcda18389f619e9301245c70290d36cc6.json  query-0f848f9ec8ae4e4291b41270c8f45d5ed1dfc96b048455bf6932362ebc6a5a6e.json  query-0fa82693f463f0aef93b6313367af426661b0eb82f8eef27d302786fcf9372a1.json  query-1027d63316cb769e814159f99211d9b2819ec9863d83c78c31a7df217ef0b739.json  query-1033e6b4ca193ab9c5e5e1868320f7a237248364d6547ee0f9346e5037b1099e.json  query-122772161fdb7ab06f34fac622a5889a58ed1096a911e94a3ffc5995228d306d.json  query-1229549a29232e58c46de27be9a3bfe5ff0eb1dc6b5a48a80287af515dbc58e9.json  query-1276fa6d0731c3d701abb4a4b02a9281509c4678c14f88c12981c242dbac99c9.json  query-13a5d9ee5e61b85459f5cc45f83f5458165715c9fb1db540c235507d17457d45.json  query-13c80810da9090f52d316787b0b474f3576cb1bd8fe79f822b47cee2fcdf427f.json  query-13f75e2e90ee81f8e0f72494c2f4a6b1fdf0998217705b085e2b1a96bcca8d8a.json  query-149bff74e77b8a662ba81354196acdd826f08aff965a5e19b2d58a85ce61980a.json  (+433 more)
config/: backup-service.env  common.env  dev.env  litestream.yml  otel-collector-config.dev.yaml  otel-collector-config.prod.yaml  otel-collector-config.yaml  prod.env  schema.sql
crates/migration-engine/: Cargo.toml
crates/migration-engine/src/migrations/: main.rs  mod.rs  reporter.rs  terminal_reporter.rs  test.rs
crates/syllabus-tracker/: Cargo.toml
crates/syllabus-tracker/src/: api.rs  capabilities.rs  catchers.rs  env.rs  error.rs  lib.rs  main.rs  models.rs  validation.rs
crates/syllabus-tracker/src/auth/: authentication.rs  mod.rs  permissions.rs  user.rs
crates/syllabus-tracker/src/db/: activity.rs  activity_read.rs  attempts.rs  collections.rs  dashboard.rs  feed.rs  invites.rs  mod.rs  pinned.rs  pins.rs  reporting.rs  sessions.rs  student_syllabus_techniques.rs  student_techniques.rs  syllabi.rs  syllabus_assignments.rs  syllabus_attempts.rs  syllabuses.rs  tags.rs  techniques.rs  threads.rs  users.rs  videos.rs  watch.rs
crates/syllabus-tracker/src/lib/seed/: mod.rs  terminal_reporter.rs
crates/syllabus-tracker/src/syllabi/: routes.rs
crates/syllabus-tracker/src/syllabuses/: routes.rs
crates/syllabus-tracker/src/test/: activity.rs  activity_read.rs  api.rs  attempts.rs  dashboard_digest.rs  dashboard_reporting.rs  db.rs  feature_flags.rs  mod.rs  pinned.rs  sessions.rs  syllabi.rs  syllabuses.rs  tags.rs  threads.rs  utils.rs  videos.rs
crates/syllabus-tracker/src/threads/: routes.rs
crates/syllabus-tracker/src/videos/: embeds.rs  metrics.rs  mod.rs  pipeline.rs  processor.rs  routes.rs  storage.rs
crates/video-job/: Cargo.toml
crates/video-job/src/: lib.rs
crates/video-media/: Cargo.toml
crates/video-media/src/: lib.rs  media.rs  storage.rs
crates/video-worker/: Cargo.toml  Dockerfile
crates/video-worker/edge/: package-lock.json  package.json  wrangler.jsonc
crates/video-worker/edge/src/: index.ts
crates/video-worker/src/: main.rs
docs/: BACKUPS.md  DEPLOYING_VIDEOS.md  LEGACY_DECOMMISSION_PLAN.md  SEED_ENGINE_REDESIGN.md  ai-telemetry-access.md  review-2026-06-08.md  video-processing-cloud-run-cutover.md  video-processing-cloudflare-cutover.md
frontend/: '  Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  vitest.config.ts
infra/: backend.tf  (+6 more)
infra-sillybus/: dns.tf  outputs.tf  providers.tf  r2_buckets.tf  r2_runtime_token.tf  versions.tf
(+347 files in other folders)
