[workspace]
members = ["crates/migration-engine", "crates/syllabus-tracker"]
default-members = ["crates/syllabus-tracker"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "1.0.0"
rust-version = "1.86"

[workspace.dependencies]
sqlx = { version = "0.8.5", features = ["runtime-async-std", "sqlite", "chrono"] }
tokio = { version = "1.45.0", features = ["process", "fs", "io-util", "macros", "rt", "rt-multi-thread", "time", "sync"] }
anyhow = "1.0"
dotenvy = "0.15.7"
tracing = { version = "0.1.41", features = ["std", "attributes"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "registry", "std", "fmt"] }
indicatif = "0.18"
regex = "1.11.1"
chrono = { version = "0.4.40", features = ["serde"] }
