[package]
name = "migration-engine"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
sqlx = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
indicatif = { workspace = true }
regex = { workspace = true }

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"
