[package]
name = "video-media"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[features]
# Exposes test-helper types (InMemoryVideoStorage, FakeMediaProbe, FakeMediaTranscode)
# for use in integration tests in other crates.
test-support = []

[dependencies]
# Async traits
async-trait = "0.1.83"

# Error handling
thiserror = "1.0"

# Logging
tracing = { workspace = true }

# Async runtime (process, fs)
tokio = { workspace = true }

# Env var reading for from_env() helpers
dotenvy = { workspace = true }

# JSON parsing for ffprobe output
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Object storage (R2/S3)
aws-config = { version = "1.5.16", default-features = false, features = ["rt-tokio", "behavior-version-latest"] }
aws-sdk-s3 = { version = "1.78.0", default-features = false, features = ["rt-tokio", "behavior-version-latest", "rustls"] }
aws-credential-types = "1.2.1"
