[package]
name = "video-worker"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[[bin]]
name = "video-worker"
path = "src/main.rs"

[dependencies]
# Shared crates
video-media = { path = "../video-media" }
video-job = { path = "../video-job" }

# Async runtime
tokio = { workspace = true }

# HTTP client (no native-tls; rustls only for container portability)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# UUID generation
uuid = { version = "1.16", features = ["v4"] }

# JSON serialization
serde_json = "1.0.140"
